--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <title>Document</title>
   </head>
   <body>
+    <button id="play-music-btn" style="position: fixed; top: 20px; right: 20px; z-index: 1000;">Play Music</button>
+    <audio src="Chaand Baaliyan Aditya A 320 Kbps.mp3" id="bg-music" loop style="display: none;"></audio>
     <!-- Envelope Screen -->
     <div id="envelope-container">
       <img src="envelope.png" alt="Envelope" id="envelope" />
-      <p>♡ Letter for You ♡</p>
+      <p style="border-color: 2px aliceblue;">Letter for You</p>
     </div>
 
     <!-- Letter Screen -->
@@ -26,7 +28,7 @@
       <div class="letter-window">
         <h1 id="letter-title">Will you be my Valentine?</h1>
 
-        <img src="cat_heart.gif" class="cat" id="letter-cat" />
+        <img src="Don.png" class="cat" id="letter-cat" />
 
         <div class="buttons" id="letter-buttons">
           <img src="yes.png" class="btn yes-btn" alt="Yes" />
@@ -37,10 +39,31 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>Valentine Date:</strong> Meow Restaurant at 7pm. Dress fancy!
+          <strong>Valentine Date:</strong> Upvan Lake at 7pm. Dress Traditional!
         </p>
       </div>
     </div>
+    <div id="made-with" style="
+  position: fixed;
+  bottom: 70px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 9998;
+  font-size: 14px;
+  color: #fff;
+  background: rgba(0,0,0,0.25);
+  padding: 6px 10px;
+  border-radius: 18px;
+  pointer-events: none;
+">made with ❤️ by Someone</div>
+      <script>
+                const playBtn = document.getElementById('play-music-btn');
+                const bgMusic = document.getElementById('bg-music');
+                playBtn.addEventListener('click', function() {
+                  bgMusic.play();
+                  playBtn.style.display = 'none';
+                });
+              </script>
     <script src="script.js"></script>
   </body>
 </html>
