--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="play-music-btn" style="position: fixed; top: 20px; right: 20px; z-index: 1000;">Play Music</button>
+    <button id="play-music-btn" style="position: fixed; top: 20px; right: 20px; z-index: 1000; height: 60px; width: 120px; border-radius: 5px;">Play Music</button>
     <audio src="Chaand Baaliyan Aditya A 320 Kbps.mp3" id="bg-music" loop style="display: none;"></audio>
     <!-- Envelope Screen -->
     <div id="envelope-container">
